# maths-snack

./: .gitignore  .pre-commit-config.yaml  .python-version  CNAME  Collatz.py  README.md  ant.py  barnsley_fern.py  chaotic_ribbon.py  collatz.py  collatz_test.py  continued_frac.py  fire.py  fly_straight.py  gauss_elim.py  graham_scan.py  growth.py  index.md  life.py  paralleloram.py  pi_collision.py  pyproject.toml  requirements.txt  sack_spiral.py  setup.cfg  snowy.py  triangle.py  van_eck.py
.mypy_cache/3.6/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.meta.json  abc.data.json  abc.meta.json  ant.data.json  ant.meta.json  builtins.data.json  builtins.meta.json  codecs.meta.json  collatz.data.json  collatz.meta.json  collatz_test.data.json  collatz_test.meta.json  config.data.json  config.meta.json  fire.data.json  fire.meta.json  (+21 more)
dragon_curve/: config.py  dragon.py  main.py
fractal_tree/: config.py  main.py  tree.py
lookbook/: dragon_curve  dragon_curve_1  fractal_tree  pi_collide_count  pi_collide_count_1  x_table  x_table_1
pygame/: blocks.py  pi_coll.py
scripts/: 10print.py  analysis.py  chaotic_ribbon.py  collatz.py  collatz_test.py  double_pend.py  fire.py  fly_straight.py  golden.py  graham_scan.py  growth.py  growth_analysis.py  life.py  mandelbrot.py  maurer_rose.py  monte_carlo.py  parallelogram.py  pyramidal_number.py  quicksort.py  sack_spiral.py  snowy.py  starr_rose-6_18_18.eps  starr_rose-6_18_18_first.eps  starr_rose-8_16_16.eps  starr_rose.py  triangle.py  van_eck.py
x_table/: config.py  main.py  text.py
(+241 files in other folders)
