[tool.poetry]
name = "maths-snack"
version = "0.1.0"
description = "Scripts for visualising and animating number series and fractal structures"
authors = ["engeir <eirroleng@gmail.com>"]

[tool.poetry.scripts]
maths-snack = "programs.wheelie.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "^3.4.1"
numpy = "^1.22.0"
scipy = "^1.6.2"
sympy = "^1.8"
numba = "^0.53.1"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
pre-commit-hooks = "^3.4.0"
black = "^20.8b1"
isort = "^5.8.0"
darglint = "^1.8.0"
pyupgrade = "^2.12.0"
mypy = "^0.812"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
